--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@react-spring/web": "^10.0.3",
     "@use-gesture/react": "^10.3.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
     "lucide-react": "^0.546.0",
+    "motion": "^12.23.24",
     "next": "15.5.6",
     "next-auth": "^4.24.11",
     "ogl": "^1.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
     "tailwind-merge": "^3.3.1"
   },
