--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "gsap": "^3.13.0",
     "lenis": "^1.3.11",
     "lucide-react": "^0.546.0",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.2",
     "motion": "^12.23.24",
-    "next": "15.5.7",
+    "next": "^15.5.9",
     "next-auth": "^4.24.11",
     "ogl": "^1.0.11",
     "react": "19.1.0",
